# Otus2_IPfilrt_v3.4

./: CMakeLists.txt  README.md  auxiliary.cpp  auxiliary.h  ip_filtr_lib.cpp  ip_filtr_lib.h  main.cpp  version.h  version.h.in
.github/workflows/: release.yml
